Update videos in Events slider

--- a/_data/events.yml
+++ b/_data/events.yml
@@ -1,3 +1,7 @@
+- title: R&amp;D day 2019
+  image: rnd_2019.jpg
+  video: https://www.youtube.com/watch?v=frU0NZfAl9M
+
 - title: Hackathon 2019
   image: hackathon_2019.png
   video: https://www.youtube.com/watch?v=X9yMzNffUiE
@@ -9,7 +13,3 @@
 - title: Hackathon 2017
   image: hackathon_2017_2.png
   video: https://www.youtube.com/watch?v=j-qMUo8_ChQ
-
-- title: R&amp;D day 2016
-  image: rnd_2016_1.jpg
-  video: https://www.youtube.com/watch?v=wNQ7B0rIB3g
