--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -40,6 +40,12 @@
   description: is an apprentice in the Design and Consult team at ePages. She’s open-minded and likes new challenges.
   image: alanghans.jpg
 
+- id: amahaiuddin
+  name: Aroso
+  full_name: Aroso Mahaiuddin
+  description: is a working student in our TechComm team, who is passionate about creating content for our epagesdevs social media channels. 
+  image: avatar_female.jpg
+
 - id: aortmann
   name: Anja O.
   full_name: Anja Ortmann
