Add avatar image

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -44,7 +44,7 @@
   name: Aroso
   full_name: Aroso Mahaiuddin
   description: is a working student in our TechComm team, who is passionate about creating content for our epagesdevs social media channels.
-  image: avatar_female.jpg
+  image: amahaiuddin.jpg
 
 - id: aortmann
   name: Anja O.
