--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -16,7 +16,7 @@
   time:
   address: Marktplatz<br>07743 Jena
 
-- title: Firmenkontaktbörse
+- title: Firmenkontaktbörse University Jena
   link:
   date: 9.-10. Jun 2020
   time:
@@ -40,7 +40,7 @@
   time:
   address: to be announced
 
-- title: Inova Ilmenau
+- title: Karrieremesse Inova Ilmenau
   link: https://inova-ilmenau.de/inova/
   date: 27.-28. Oct 2020
   time:
