--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -1,6 +1,6 @@
 - title: Social Media Week
   link: https://smwhamburg.com/
-  date: 25.-26. Feb 2020
+  date: 25.-27. Feb 2020
   time:
   address: SMWHH Hub University<br>Museumstrasse 39<br>22765 Hamburg
 
@@ -9,6 +9,12 @@
   date: 25.-26. Mar 2020
   time:
   address: ePages GmbH<br>Pilatuspool 2<br>20355 Hamburg
+
+- title: Firmenkontaktmesse FH Wedel
+  link: https://www.fh-wedel.de/bewerben/beratung/kennenlernen/firmenkontaktmesse/
+  date: 6. May 2020
+  time:
+  address: FH Wedel<br>Feldstraße 143<br>22880 Wedel
 
 - title: Jobwalk Jena
   link: https://jena.jobwalk.city
@@ -45,3 +51,9 @@
   date: 27.-28. Oct 2020
   time:
   address: TU Ilmenau<br>Max-Planck-Ring 14<br>98693 Ilmenau
+
+- title: code.talks
+  link: https://www.codetalks.de/
+  date: 29.-30. Oct 2020
+  time:
+  address: CinemaxX Dammtor<br>Dammtordamm 1<br>20354 Hamburg
