--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -44,7 +44,7 @@
   link:
   date: 1.-2. Oct 2020
   time:
-  address: to be announced
+  address: to be announced<br><br><br>
 
 - title: Karrieremesse Inova Ilmenau
   link: https://inova-ilmenau.de/inova/
