Adapt conference title

--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -46,7 +46,7 @@
   time:
   address: to be announced<br><br><br>
 
-- title: Karrieremesse Inova Ilmenau
+- title: Karriereforum inovailmenau
   link: https://inova-ilmenau.de/inova/
   date: 27.-28. Oct 2020
   time:
