--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -151,7 +151,7 @@
 - id: dhara
   name: Daniel
   full_name: Daniel Hara
-  description: is a JavaScript Enginner and a classical music and opera aficionado who is passionate about testing.
+  description: is a JavaScript Engineer and a classical music and opera aficionado who is passionate about testing.
   image: dhara.jpg
 
 - id: djablonski
