--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -148,6 +148,12 @@
   description: belongs to the epagesdevs content team.
   image: avatar_male.jpg
 
+- id: dhara
+  name: Daniel
+  full_name: Daniel Hara
+  description: is a JavaScript Engineer and a classical music and opera aficionado who is passionate about testing.
+  image: dhara.jpg
+
 - id: djablonski
   name: Dirk
   full_name: Dirk Jablonski
