--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -1,14 +1,14 @@
-- title: Social Media Week
-  link: https://smwhamburg.com/
-  date: 25.-27. Feb 2020
-  time:
-  address: SMWHH Hub University<br>Museumstrasse 39<br>22765 Hamburg
-
 - title: ePages Hackathon
   link:
   date: 25.-26. Mar 2020
   time:
   address: ePages GmbH<br>Pilatuspool 2<br>20355 Hamburg
+
+- title: TestCon Moscow
+  link: https://testconf.ru/
+  date: 1.-2. Apr 2020
+  time:
+  address: Hotel Vega Izmailovo<br>Autobahn 71, 3B<br>105613 Moskau, Izmailovo<br>
 
 - title: Firmenkontaktmesse FH Wedel
   link: https://www.fh-wedel.de/bewerben/beratung/kennenlernen/firmenkontaktmesse/
