--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -370,6 +370,12 @@
   description: is an experienced Software Engineer with a degree in Technical Informatics. His focus is on backend implementations for our products Base and Now.
   image: mhoehn.jpg
 
+- id: mkofler
+  name: Miriam
+  full_name: Miriam Kofler
+  description: belongs to the epagesdevs content team.
+  image: avatar_female.jpg
+
 - id: mkohl
   name: Martin
   full_name: Martin
