--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ defaults: &defaults
   working_directory: ~/repo
   environment:
     BUNDLE_PATH: ~/repo/vendor/bundle
+    BUNDLER_VERSION: 2.1.4
 
 devportal_defaults: &devportal_defaults
   <<: *defaults
@@ -26,7 +27,10 @@ jobs:
             - devportal-rubygems-v1-fallback
       - run:
           name: Bundle Install
-          command: bundle install
+          command: |
+            gem update --system
+            gem install bundler
+            bundle install
       - save_cache:
           key: devportal-rubygems-v1-{{ checksum "Gemfile.lock" }}
           paths:
@@ -67,7 +71,10 @@ jobs:
             - docs-rubygems-v1-fallback
       - run:
           name: Bundle Install
-          command: bundle install
+          command: |
+            gem update --system
+            gem install bundler
+            bundle install
       - save_cache:
           key: docs-rubygems-v1-{{ checksum "Gemfile.lock" }}
           paths:
