--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,7 @@ jobs:
           name: Bundle Install
           command: |
             gem update --system
+            gem install bundler
             bundle install
       - save_cache:
           key: devportal-rubygems-v1-{{ checksum "Gemfile.lock" }}
@@ -72,6 +73,7 @@ jobs:
           name: Bundle Install
           command: |
             gem update --system
+            gem install bundler
             bundle install
       - save_cache:
           key: docs-rubygems-v1-{{ checksum "Gemfile.lock" }}
