--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,12 +4,13 @@ defaults: &defaults
   working_directory: ~/repo
   environment:
     BUNDLE_PATH: ~/repo/vendor/bundle
-    BUNDLER_VERSION: 2.1.4
 
 devportal_defaults: &devportal_defaults
   <<: *defaults
   docker:
     - image: circleci/ruby:2.4.2
+      environment:
+        BUNDLER_VERSION: 2.1.4
 
 docs_defaults: &docs_defaults
   <<: *defaults
@@ -27,10 +28,7 @@ jobs:
             - devportal-rubygems-v1-fallback
       - run:
           name: Bundle Install
-          command: |
-            gem update --system
-            bundle update --bundler
-            bundle install
+          command: bundle install
       - save_cache:
           key: devportal-rubygems-v1-{{ checksum "Gemfile.lock" }}
           paths:
@@ -71,10 +69,7 @@ jobs:
             - docs-rubygems-v1-fallback
       - run:
           name: Bundle Install
-          command: |
-            gem update --system
-            bundle update --bundler
-            bundle install
+          command: bundle install
       - save_cache:
           key: docs-rubygems-v1-{{ checksum "Gemfile.lock" }}
           paths:
