--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,6 @@ devportal_defaults: &devportal_defaults
   <<: *defaults
   docker:
     - image: circleci/ruby:2.4.2
-      environment:
-        BUNDLER_VERSION: 2.1.4
 
 docs_defaults: &docs_defaults
   <<: *defaults
@@ -28,7 +26,7 @@ jobs:
             - devportal-rubygems-v1-fallback
       - run:
           name: Install Dependencies
-          command: gem install bundler
+          command: gem install bundler -v "$(grep -A 1 "BUNDLED WITH" Gemfile.lock | tail -n 1)"
       - run:
           name: Bundle Install
           command: bundle install
