--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,11 +9,15 @@ devportal_defaults: &devportal_defaults
   <<: *defaults
   docker:
     - image: circleci/ruby:2.4.2
+      environment:
+        BUNDLER_VERSION: 2.1.4
 
 docs_defaults: &docs_defaults
   <<: *defaults
   docker:
     - image: circleci/ruby:2.4.1
+      environment:
+        BUNDLER_VERSION: 2.1.4
 
 jobs:
   build_test_devportal:
@@ -27,7 +31,7 @@ jobs:
       - run:
           name: Bundle Install
           command: |
-            gem install bundler -v "$(grep -A 1 "BUNDLED WITH" Gemfile.lock | tail -n 1)"
+            gem install bundler
             bundle install
       - save_cache:
           key: devportal-rubygems-v1-{{ checksum "Gemfile.lock" }}
@@ -70,7 +74,7 @@ jobs:
       - run:
           name: Bundle Install
           command: |
-            gem install bundler -v "$(grep -A 1 "BUNDLED WITH" Gemfile.lock | tail -n 1)"
+            gem install bundler
             bundle install
       - save_cache:
           key: docs-rubygems-v1-{{ checksum "Gemfile.lock" }}
