--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ github_username: ePages-de
 youtube_username: UCI5hX9kgUGFnYpfxZYxlP0Q
 linkedin_username: epages
 xing_username: epagesgmbh
-instagram_username: epages_com
+instagram_username: life_at_epages
 
 markdown: kramdown
 
