--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -190,6 +190,12 @@
   description: is a JavaScript Engineer, Node.js lover, and Elixir alchemist.
   image: emueller.jpg
 
+- id: eprohn
+  name: Elisa
+  full_name: Elisa Prohn
+  description: is a passionate HR Manager, who loves the variety of challenges in her daily working life. She strongly believes in building employee engagement.
+  image: eprohn.jpg
+
 - id: ewiedmann
   name: Elisa
   full_name: Elisa Wiedmann
@@ -309,6 +315,12 @@
   full_name: Kerstin Deharde
   description: is a Product Owner at ePages. She started her job career as an Editor where she learned to love user-centric values. Taking these values over to Product Management truly matters to her.
   image: kdeharde.jpg
+
+- id: kkoessler
+  name: Katharina
+  full_name: Katharina Kössler
+  description: is an HR Manager at ePages. She loves to spread good humor and motivation, and to find new colleagues for our different teams.
+  image: kkoessler.jpg
 
 - id: kmueller
   name: Katja
