--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -34,6 +34,12 @@
   description: is an experienced Infrastructure System Engineer with experiences ranging from VAX/VMS to today's current Linux systems. He is a passionate photographer, and never goes without a camera.
   image: avatar_male.jpg
 
+- id: akhasanov
+  name: Andrey K.
+  full_name: Andrey Khasanov
+  description: is a Java Developer, who likes to use different languages for different tasks. He calls Africa his home.
+  image: avatar_male.jpg
+
 - id: alanghans
   name: Anna-Lena
   full_name: Anna-Lena Langhans
