--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -35,7 +35,7 @@
   image: avatar_male.jpg
 
 - id: akhasanov
-  name: Andrey K.
+  name: Andrey
   full_name: Andrey Khasanov
   description: is a Java Developer, who likes to use different languages for different tasks. He calls Africa his home.
   image: avatar_male.jpg
