Blog post about background processing in rails

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -336,7 +336,7 @@
 
 - id: ksalazar
   name: Kathia
-  full_name: Kathia Salazar
+  full_name: Kathia
   description: is a Software Developer with open attitude when it comes to programming languages and frameworks.
   image: ksalazar.jpg
 
