--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -4,6 +4,12 @@
   time:
   address: Lokomotivværkstedet<br>Otto Busses Vej 5A<br>2450 Copenhagen SV
 
+- title: jobwalk Jena
+  link: https://jena.jobwalk.city/
+  date: 26. Sept 2020
+  time:
+  address: Marktplatz Jena<br>Markt 1<br>07743 Jena
+
 - title: Commerce Summit
   link:
   date: 1.-2. Oct 2020
@@ -12,7 +18,7 @@
 
 - title: Karriereforum inovailmenau
   link: https://inova-ilmenau.de/inova/
-  date: 27.-28. Oct 2020
+  date: 28. Oct 2020
   time:
   address: TU Ilmenau<br>Max-Planck-Ring 14<br>98693 Ilmenau
 
