--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -1,3 +1,9 @@
+- title: JENA Digital SAFARI
+  link: https://www.jena-digital.de/veranstaltungen/jena-digital-safari/
+  date: 19. June 2020
+  time:
+  address: Online only
+
 - title: Design Matters
   link: https://designmatters.io/
   date: 23.-24. Sept 2020
