--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -2,7 +2,7 @@
   link: https://www.jena-digital.de/veranstaltungen/jena-digital-safari/
   date: 19. June 2020
   time:
-  address: Online only
+  address: Online only<br>
 
 - title: Design Matters
   link: https://designmatters.io/
@@ -20,7 +20,7 @@
   link:
   date: 1.-2. Oct 2020
   time:
-  address: to be announced<br><br><br>
+  address: to be announced<br>
 
 - title: Karriereforum inovailmenau
   link: https://inova-ilmenau.de/inova/
