--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -1,18 +1,30 @@
+- title: JENA Digital Safari
+  link: https://www.jena-digital.de/veranstaltungen/jena-digital-safari/
+  date: 19. Jun 2020
+  time:
+  address: Online only<br>
+
 - title: Design Matters
   link: https://designmatters.io/
-  date: 23.-24. Sept 2020
+  date: 23.-24. Sep 2020
   time:
   address: Lokomotivværkstedet<br>Otto Busses Vej 5A<br>2450 Copenhagen SV
+
+- title: jobwalk Jena
+  link: https://jena.jobwalk.city/
+  date: 26. Sep 2020
+  time:
+  address: Marktplatz Jena<br>Markt 1<br>07743 Jena
 
 - title: Commerce Summit
   link:
   date: 1.-2. Oct 2020
   time:
-  address: to be announced<br><br><br>
+  address: to be announced<br>
 
 - title: Karriereforum inovailmenau
   link: https://inova-ilmenau.de/inova/
-  date: 27.-28. Oct 2020
+  date: 28. Oct 2020
   time:
   address: TU Ilmenau<br>Max-Planck-Ring 14<br>98693 Ilmenau
 
