Fix author description

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -355,7 +355,7 @@
 - id: kwendt
   name: Katharina W.
   full_name: Katharina Wendt
-  description: is a dedicated Tech Recruiter who loves to meet different people. She is always happy when a new colleague joins ePages and enjoys to support with onboarding.
+  description: is a dedicated Tech Recruiter who loves to meet different people. She is always happy when a new colleague joins ePages and enjoys supporting with onboarding.
   image: avatar_female.jpg
 
 - id: lbrandt
