--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -434,7 +434,7 @@
   name: Manfred
   full_name: Manfred Zeller
   description: is a certified Scrum Master. He enjoys taking part in complicated discussions a lot and is always looking for ways to proceed and to grow as a team.
-  image: avatar_male.jpg
+  image: mzeller.jpeg
 
 - id: mzeyen
   name: Maik
