--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -1,3 +1,9 @@
+- title: IT-KoM Erfurt
+  link: https://www.ai.fh-erfurt.de/itk
+  date: 22. Jul 2020
+  time:
+  address: Online only
+
 - title: Design Matters
   link: https://designmatters.io/
   date: 23.-24. Sep 2020
