--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -2,7 +2,7 @@
   link: https://www.ai.fh-erfurt.de/itk
   date: 22. Jul 2020
   time:
-  address: Online only
+  address: Online-only
 
 - title: Design Matters
   link: https://designmatters.io/
