--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -654,6 +654,6 @@
 
 - id: ywolpers
   name: Yasmine
-  full_name: Yasmine Wolpers
+  full_name: Yasmine W.
   description: is a UX-Writer/Tech-Writer at ePages. She loves working with words and languages and is passionate about finding just the right wording. Even if that means deciding the original wording was actually the best option.
   image: ywolpers.jpg
