--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -651,3 +651,9 @@
   full_name: Xavier Alvarez
   description: is a Java and Kotlin Backend Developer, and an Ubuntu fanboy.
   image: avatar_male.jpg
+
+- id: ywolpers
+  name: Yasmine
+  full_name: Yasmine W.
+  description: is a UX Writer / Tech Writer at ePages. She loves working with words and languages and is passionate about finding just the right wording. Even if that means deciding the original wording was actually the best option.
+  image: ywolpers.jpg
