Changed author description and removed events

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -331,7 +331,7 @@
 - id: kkoessler
   name: Katharina K.
   full_name: Katharina Kössler
-  description: is an HR Manager at ePages. She loves to spread good humor and motivation, and to find new colleagues for our different teams.
+  description: is our HR Manager at ePages in Jena. She loves to spread good humor and motivation, and to find new colleagues for the different teams.
   image: kkoessler.jpg
 
 - id: kmueller
