confi-display: add first version

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -452,7 +452,7 @@
   name: Norman
   full_name: Norman Franke
   description: keeps ePages’ shops running - day and night - and is not afraid of standby duty.
-  image: avatar_male.jpg
+  image: nfranke.jpg
 
 - id: nstender
   name: Nicole
