--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -133,7 +133,7 @@
 - id: crichter
   name: Christin
   full_name: Christin Richter
-  description: is a Localization Expert, writer, and part of the PhraseApp Content Team. She considers innovation a mandatory process, that is enhanced by disruptive technologies and organizations.
+  description: is a Localization Expert, writer, and part of the Phrase Content Team. She considers innovation a mandatory process, that is enhanced by disruptive technologies and organizations.
   image: crichter.jpg
 
 - id: cseeger
@@ -235,7 +235,7 @@
 - id: fvollert
   name: Frederik
   full_name: Frederik Vollert
-  description: is the founder of PhraseApp.com and shares the team's notoriously bad music taste; he loves rap. Having spent some time in the U.S. as a high-school student and enjoying traveling, he is interested in the differences and similarities in international culture and took localization seriously from the beginning in every project he worked on.
+  description: is the founder of Phrase.com and shares the team's notoriously bad music taste; he loves rap. Having spent some time in the U.S. as a high-school student and enjoying traveling, he is interested in the differences and similarities in international culture and took localization seriously from the beginning in every project he worked on.
   image: fvollert.jpg
 
 - id: fziller
