--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -1,17 +1,11 @@
-- title: Karriereforum inovailmenau
-  link: https://inova-ilmenau.de/inova/
-  date: 28. Oct 2020
-  time:
-  address: TU Ilmenau<br>Max-Planck-Ring 14<br>98693 Ilmenau
-
 - title: Firmenkontaktbörse University Jena
-  link: https://www.sft.uni-jena.de/Aktuelles/Veranstaltungen/Firmenkontaktb%C3%B6rse+2020.html
-  date: 3. Nov 2020
+  link: https://www.uni-jena.de/firmenkontaktboerse
+  date: 25. Nov 2020
   time:
-  address: Friedrich-Schiller-Universität Jena<br>Campus Ernst-Abbe-Platz<br>Carl-Zeiß-Straße 3<br>07743 Jena
+  address: Online only
 
 - title: Jenaer Unternehmenstage
   link: https://jenaer-unternehmenstage.de/
-  date: 5. Nov 2020
+  date: 26. Nov 2020
   time:
-  address: Friedrich-Schiller-Universität Jena<br>Campus Ernst-Abbe-Platz<br>Carl-Zeiß-Straße 3<br>07743 Jena
+  address: Online only
