--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -673,5 +673,5 @@
 - id: rwelzel
   name: Roberto
   full_name: Roberto Welzel Filho
-  description: is a Java backend developer and an ocasional video game player.
+  description: is a Java Backend Developer and an ocasional video game player.
   image: rwelzel.jpg
