--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -532,6 +532,12 @@
   description: belongs to the epagesdevs content team.
   image: avatar_male.jpg
 
+- id: rwelzel
+  name: Roberto
+  full_name: Roberto Welzel Filho
+  description: is a Java Backend Developer and an occasional video game player.
+  image: rwelzel.jpg
+
 - id: sdinter
   name: Skadi
   full_name: Skadi Dinter
@@ -669,9 +675,3 @@
   full_name: Yasmine W.
   description: is a UX Writer / Tech Writer at ePages. She loves working with words and languages and is passionate about finding just the right wording. Even if that means deciding the original wording was actually the best option.
   image: ywolpers.jpg
-
-- id: rwelzel
-  name: Roberto
-  full_name: Roberto Welzel Filho
-  description: is a Java Backend Developer and an ocasional video game player.
-  image: rwelzel.jpg
