Blog post about load testing (#667)
* Blog post about load testing
* Adding images.
* Fixing tests
* Addressing comments.
* Addressing comments (2).
* Second batch of review corrections.
* One sentence per line
* Final review
* Rename post
* Change title
* Remove unused image
* Fix typo

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -532,6 +532,12 @@
   description: belongs to the epagesdevs content team.
   image: avatar_male.jpg
 
+- id: rwelzel
+  name: Roberto
+  full_name: Roberto Welzel Filho
+  description: is a Java Backend Developer and an occasional video game player.
+  image: rwelzel.jpg
+
 - id: sdinter
   name: Skadi
   full_name: Skadi Dinter
