Add further location information

--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -2,4 +2,4 @@
   link: https://jena.jobwalk.city/
   date: 10. Jul 2021
   time:
-  address: Markt 1<br>07743 Jena
+  address: Marktplatz Jena<br>Markt 1<br>07743 Jena
