Removed outdated events (#669)
* Removed outdated events
* Add new event
* Add change
* Add further location information

--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -1,11 +1,5 @@
-- title: Firmenkontaktbörse University Jena
-  link: https://www.uni-jena.de/firmenkontaktboerse
-  date: 25. Nov 2020
+- title: jobwalk Jena
+  link: https://jena.jobwalk.city/
+  date: 10. Jul 2021
   time:
-  address: Online only
-
-- title: Jenaer Unternehmenstage
-  link: https://jenaer-unternehmenstage.de/
-  date: 26. Nov 2020
-  time:
-  address: Online only
+  address: Marktplatz Jena<br>Markt 1<br>07743 Jena
