--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -1,29 +1,29 @@
+- title: Ruby Developer
+  link: https://epages-gmbh.jobs.personio.de/job/202168?language=en
+  description: With your skills in Ruby, Rails, JavaScript, and PostgreSQL you are responsible for the development of our crucial in-house tools.
+  location: Bilbao
+  
 - title: Senior Java Developer
   link: https://epages-gmbh.jobs.personio.de/job/202115
   description: Bring your knowledge of Java and Kotlin to work on a microservice-based architecture for our new ecommerce platform.
   location: Hamburg
 
-- title: Ruby Developer
-  link: https://epages-gmbh.jobs.personio.de/job/202168?language=en
-  description: With your skills in Ruby, Rails, JavaScript, and PostgreSQL you are responsible for the development of our crucial in-house tools.
-  location: Bilbao
-
 - title: Technical Product Owner
   link: https://epages-gmbh.jobs.personio.de/job/226186?language=en
-  description: With your analytical skills you'll be responsible for several Scrum teams and work on the further development of our Cloud-Commerce platform.
+  description: With your knowledge of the tech stacks of website and commerce platforms you are responsible for several Scrum teams.
   location: Hamburg
 
 - title: Technical Writer - Social Media & Localization
   link: https://epages-gmbh.jobs.personio.de/job/290299?language=de
-  description: Rock our developer relations in taking care of our social media channels and supporting our localization & translation management.
+  description: Rock our developer relations on our social media channels and support the localization & translation management team.
   location: Hamburg
 
 - title: User Experience Manager
   link: https://epages-gmbh.jobs.personio.de/job/203174?language=de
-  description: Join our agile user experience team in developing user-friendly interaction concepts for our ecommerce software.
+  description: Join our agile user experience team and develop user-friendly interaction concepts for our ecommerce software.
   location: Hamburg
 
 - title: Internship / Working student - Software development
   link: https://epages-gmbh.jobs.personio.de/job/202164?language=de
-  description: Support our development department in the conception and implementation of new functions of our web-based online store software. 
+  description: Support our RnD department in the conception and implementation of new features for our web-based online shop software. 
   location: Jena
