--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -124,6 +124,12 @@
   description: is an Application Engineer, keeping systems running, and exploring the cloud.
   image: ckoehler.jpg
 
+  - id: ckorff
+  name: Christian Korff
+  full_name: Christian Korff
+  description:  is a UX Manager who loves to create interaction concepts which focus on the user needs and strives for a company UX mindset.
+  image: ckorff.png
+
 - id: cmueller
   name: Christoph
   full_name: Christoph
