--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -128,7 +128,7 @@
   name: Christian Korff
   full_name: Christian Korff
   description:  is a UX Manager who loves to create interaction concepts which focus on the user needs and strives for a company UX mindset.
-  image: ckorff.png
+  image: chkorff.png
 
 - id: cmueller
   name: Christoph
