--- a/_data/instagram.yml
+++ b/_data/instagram.yml
@@ -1,6 +1,6 @@
 blog:
   image: /assets/img/pages/instagram/design-thinking-workshop.jpg
-  text: <strong>How Design Thinking workshops with developers can boost your company’s UX mindset</strong>
+  text: <strong style="font-size:1.8rem;">How Design Thinking workshops with developers can boost your campany's UX mindset</strong>
   link: /blog/ux-and-design/how-design-thinking-workshops-with-developers-can-boost-your-companys-ux-mindset/
 
 job:
