--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -594,7 +594,7 @@
 
 - id: svoelz
   name: Svenja
-  full_name: Svenja Voelz
+  full_name: Svenja Völz
   description: is a passionate Frontend Designer. She loves modern and clean user interfaces as much as video games or a good book.
   image: avatar_female.jpg
 
