--- a/_data/instagram.yml
+++ b/_data/instagram.yml
@@ -1,6 +1,6 @@
 blog:
   image: /assets/img/pages/instagram/blog-post-application-management.jpg
-  text: <strong>What working as an Application Management Engineer is all about</strong>
+  text: What working as an Application Management Engineer is all about
   link: /blog/on-the-job/what-working-as-an-application-management-engineer-is-all-about/
 
 job:
